--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-body {
+body{
     background: black;
     display: flex;
     justify-content: center;
@@ -6,8 +6,25 @@ body {
 }
 
 .set {
-    margin-top: 50px;
-    height: 400px;
-    width: 400px;
-    background: rgb(19, 234, 230)
+    border: 2px solid white;
+    margin-top: 100px;
+    height: 1000px;
+    width: 1000px;
+    background: url(../assets/Background.jpg);
+        background-size: cover; 
+        background-repeat: no-repeat; 
+        background-position: relative; 
+    
+} 
+
+.set * {
+    z-index: 1; 
 }
+
+@import url(//fonts.googleapis.com/css?family=Patrick+Hand+SC|Bangers|Happy+Monkey);
+
+h1 {
+    color:aliceblue;
+    font-family:"Bangers", sans-serif;
+}
+    
