--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,24 @@
-body{
+body {
     background: black;
-    display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.set {
-    border: 2px solid white;
-    margin-top: 100px;
-    height: 1000px;
-    width: 1000px;
-    background: url(../assets/Background.jpg);
-        background-size: cover; 
-        background-repeat: no-repeat; 
-        background-position: relative; 
+    }
     
-} 
-
-.set * {
-    z-index: 1; 
-}
-
-@import url(//fonts.googleapis.com/css?family=Patrick+Hand+SC|Bangers|Happy+Monkey);
-
-h1 {
-    color:aliceblue;
-    font-family:"Bangers", sans-serif;
-}
-    
+    .image-container {
+        width: 75%;
+        height: 75vh;
+        overflow: hidden;
+        position: relative;
+        margin: auto;
+        margin-top: 50px;
+        border: solid 2px rgb(233, 235, 175);
+        }
+        
+        .image-container img {
+            position: relative;
+            top: -10px;
+            left: 50%;
+            transform: translate(-50%, 0) scale(1.5);
+            max-width: 100%;
+            max-height: 100%;
+            }
