--- a/css/style.css
+++ b/css/style.css
@@ -22,3 +22,8 @@ body {
             max-width: 100%;
             max-height: 100%;
             }
+    
+    h1 {
+    font-family: 'Bangers', cursive;
+    color: rgb(233, 235, 175)
+    }
