--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,11 @@
     text-align:center;
     } */
 
-    /* body {
+    .hidden {
+        display: none;
+      }
+
+    body {
     background: black;
     justify-content: center;
     align-items: center;
@@ -45,7 +49,7 @@
         border: solid 2px rgb(233, 235, 175);
         }
         
-        .image-container img {
+         .image-container img {
             position: relative;
             top: -10px;
             left: 50%;
@@ -58,8 +62,58 @@
     font-family: 'Bangers', cursive;
     color: rgb(233, 235, 175);
     text-align:center;
-    } */
+    }  
 
-    body {
-        background-color: aliceblue;
-    }
+.buttons-one {
+    font-family: "Comic Sans MS", sans-serif;
+    background-color: rgb(233, 235, 175); ;
+}
+
+.button-container {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+  }
+
+  ul {
+    color: white
+  }
+
+ #hero-bar {
+    width: 200px;
+    height: 20px;
+    margin: 0 auto;
+    background-color: purple;
+    position: relative;
+    margin-bottom: 10px; 
+}
+
+
+#hero-level {
+    width: 0;
+    height: 100%;
+    background-color: red; 
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-bottom: 10px; 
+}
+
+#villain-bar {
+    width: 200px;
+    height: 20px;
+    margin: 0 auto;
+    background-color: purple;
+    position: relative;
+    margin-bottom: 10px; 
+}
+
+#villain-level {
+    width: 0;
+    height: 100%;
+    background-color: red; 
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-bottom: 10px; 
+}
