--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* body {
+body {
     background: black;
     justify-content: center;
     align-items: center;
@@ -12,42 +12,10 @@
         margin: auto;
         margin-top: 50px;
         border: solid 2px rgb(233, 235, 175);
-        }
+        text-align: center;
+        margin-bottom: 10px;
+    }
         
-        .image-container img {
-            position: relative;
-            top: -10px;
-            left: 50%;
-            transform: translate(-50%, 0) scale(1.5);
-            max-width: 100%;
-            max-height: 100%;
-            }
-    
-    h1 {
-    font-family: 'Bangers', cursive;
-    color: rgb(233, 235, 175);
-    text-align:center;
-    } */
-
-    .hidden {
-        display: none;
-      }
-
-    body {
-    background: black;
-    justify-content: center;
-    align-items: center;
-    }
-    
-    .image-container {
-        width: 75%;
-        height: 75vh;
-        overflow: hidden;
-        position: relative;
-        margin: auto;
-        margin-top: 50px;
-        border: solid 2px rgb(233, 235, 175);
-        }
         
          .image-container img {
             position: relative;
@@ -66,7 +34,8 @@
 
 .buttons-one {
     font-family: "Comic Sans MS", sans-serif;
-    background-color: rgb(233, 235, 175); ;
+    background-color: rgb(233, 235, 175); 
+    margin-bottom: 10px;
 }
 
 .button-container {
@@ -83,7 +52,7 @@
     width: 200px;
     height: 20px;
     margin: 0 auto;
-    background-color: purple;
+    background-color: blue;
     position: relative;
     margin-bottom: 10px; 
 }
@@ -117,3 +86,15 @@
     left: 0;
     margin-bottom: 10px; 
 }
+
+#question {
+    color: white;
+  }
+
+  
+
+.hidden {
+    display: none;
+}
+
+
