--- a/css/style.css
+++ b/css/style.css
@@ -1,60 +1,76 @@
-body {
+html, body {
+    margin: 0; height: 100%; overflow: hidden;
     background: black;
-    justify-content: center;
-    align-items: center;
-    }
+
+}
+
+.buttons-one{
+    position: relative;
+    border-radius: 10px;
+    top:-40px;
+    left: 330px;
+}
     
-    .image-container {
-        width: 75%;
-        height: 75vh;
-        overflow: hidden;
-        position: relative;
-        margin: auto;
-        margin-top: 50px;
-        border: solid 2px rgb(233, 235, 175);
-        text-align: center;
-        margin-bottom: 10px;
-    }
-        
-        
-         .image-container img {
-            position: relative;
-            top: -10px;
-            left: 50%;
-            transform: translate(-50%, 0) scale(1.5);
-            max-width: 100%;
-            max-height: 100%;
-            }
+.image-container {
+    width: 800px;
+    overflow: hidden;
+    position: relative;
+    border-radius: 30px;
+    top: -90px;
+    margin: auto;
+    margin-top: 50px;
+    border: solid 3px rgb(233, 235, 175);
+    text-align: center;
+    margin-bottom: 10px;
+}
     
-    h1 {
+    
+.image-container img {
+    position: relative;
+    top: 0px;
+    left: 50%;
+    transform: translate(-50%, 0) scale(1.5);
+    max-width: 100%;
+    max-height: 100%;
+    filter: contrast(140%);
+}
+
+h1 {
+    position: relative;
+    top: -23px;
     font-family: 'Bangers', cursive;
     color: rgb(233, 235, 175);
     text-align:center;
-    }  
+}  
 
 .buttons-one {
     font-family: "Comic Sans MS", sans-serif;
     background-color: rgb(233, 235, 175); 
     margin-bottom: 10px;
+    position: relative;
 }
 
 .button-container {
     position: absolute;
     top: 20px;
     left: 20px;
-  }
+    }
 
-  ul {
+    ul {
     color: white
-  }
+}
 
- #hero-bar {
+#hero-bar {
     width: 200px;
     height: 20px;
+    top: -510px;
+    left: 500px;
     margin: 0 auto;
-    background-color: blue;
+    background-color: #009D93;
     position: relative;
+    transform: rotate(90deg);
     margin-bottom: 10px; 
+    visibility: visible;
 }
 
 
@@ -66,15 +82,20 @@ body {
     top: 0;
     left: 0;
     margin-bottom: 10px; 
+    
 }
 
 #villain-bar {
+    top: -510px;
+    right: 500px;
     width: 200px;
     height: 20px;
     margin: 0 auto;
-    background-color: purple;
+    background-color: #FF180B;
     position: relative;
     margin-bottom: 10px; 
+    transform: rotate(90deg);
+    visibility: visible;
 }
 
 #villain-level {
@@ -89,12 +110,41 @@ body {
 
 #question {
     color: white;
-  }
-
-  
-
-.hidden {
-    display: none;
+    width: 120px;
+    position: relative;
+    text-shadow: 1px 4px 1px black;
+    bottom: 230px;
+    left: 52px;
+    font-size: 40px;
+    top: -110px
+    
 }
+
+
+form{
+    position: relative;
+    max-height: 50px;
+    width: 220px;
+    left: 310px;
+    top: -195px;
+    color: white;
+    visibility: visible;
+}
+
+#instructions{
+    position: relative;
+    top: -480px;
+    left: 200px;
+    visibility: visible;
+    color: rgb(233, 235, 175);
+    text-shadow: 1px 1px 1px black;
+    font-size: 25px;
+}
+
+
+
+
+
+
 
 
