--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ html, body {
 }
     
 .image-container {
-    width: 800px;
+    width: 700px;
     overflow: hidden;
     position: relative;
     border-radius: 30px;
@@ -63,7 +63,7 @@ h1 {
 #hero-bar {
     width: 200px;
     height: 20px;
-    top: -510px;
+    top: -480px;
     left: 500px;
     margin: 0 auto;
     background-color: #009D93;
@@ -133,18 +133,17 @@ form{
 
 #instructions{
     position: relative;
-    top: -480px;
+    top: -150px;
     left: 200px;
     visibility: visible;
-    color: rgb(233, 235, 175);
     text-shadow: 1px 1px 1px black;
-    font-size: 25px;
+    font-size: 17px;
+    font-family:"Comic Sans MS", sans-serif;
+    color: rgb(233, 235, 175);
 }
 
 
 
-
-
-
-
-
+.hidden {
+    display: none;
+}
