--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ h1 {
         background-color: green;
       }
 
-#villain-bar {
+/* #villain-bar {
     top: -510px;
     right: 500px;
     width: 200px;
@@ -115,8 +115,19 @@ h1 {
     position: absolute;
     top: 0;
     left: 0;
-    margin-bottom: 10px; 
-}
+    margin-bottom: 10px;  */
+    #villain-bar {
+        width: 200px;
+        height: 20px;
+        border: 1px solid black;
+      }
+    
+      #villain-level {
+        width: 100%; 
+        height: 100%;
+        background-color: pink;
+      }
+
 
 #question {
     color: white;
