--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ html, body {
     border: solid 3px rgb(233, 235, 175);
     text-align: center;
     margin-bottom: 10px;
+    
 }
     
     
@@ -90,7 +91,7 @@ h1 {
       }
     
       #hero-level {
-        width: 100%; /* start at full hunger */
+        width: 100%; 
         height: 100%;
         background-color: green;
       }
