--- a/css/style.css
+++ b/css/style.css
@@ -160,8 +160,17 @@ img {
     margin: auto;
     margin-top: 50px;
     border: solid 3px rgb(233, 235, 175);
-    text-align: center;
     margin-bottom: 10px;
+    margin-left: 550px
     
 }
-    
+
+#question {
+margin-left: 800px;
+margin-top:  -250px
+}
+
+#instructions {
+margin-left:400px;
+margin-top: 300px;
+}
