--- a/css/style.css
+++ b/css/style.css
@@ -183,7 +183,9 @@ margin-top:  -250px
 
   
   
-  
+  #final-image {
+    display:none;
+  }
   
   
   
@@ -252,3 +254,7 @@ margin-top: 300px;
   }
 
 
+
+
+  
+ 
