--- a/css/style.css
+++ b/css/style.css
@@ -38,21 +38,21 @@ img {
 
  h1{ 
     position: relative;
-    top: 80px;
+    top: 0px;
     font-family: 'Bangers', cursive;
     font-size: 100px;
     color: rgb(233, 235, 175);
     text-align:center;
 }  
 
-h2{
+/* h2{
     position: relative;
     top: -540px;
     font-family: 'Bangers', cursive;
     color: rgb(black);
     text-align:center;
     font-size:23px;
-}
+} */
 
 h3{
     position: relative;
@@ -72,7 +72,7 @@ h3{
     background-color: rgb(233, 235, 175);
     position: absolute;
     top: 600px;
-    left: 820px;
+    left: 700px;
     display: inline-block;
     }
  
@@ -95,7 +95,7 @@ h3{
     position: relative;
     text-shadow: 1px 4px 1px black;
     bottom: 230px;
-    left: -150px;
+    left: -300px;
     font-size: 40px;
     top: -110px
     
@@ -122,7 +122,7 @@ h3{
 
 #villain-image{
     margin-right: -50px;
-    margin-left: 250px;
+    margin-left: 150px;
     margin-top: 50px;
     border: solid 3px rgb(233, 235, 175);
     border-radius: 10px;
@@ -143,8 +143,8 @@ img {
 
 
 #result {
-    top: 430px;
-    left: 850px;
+    top:400px;
+    left: 675px;
     position:absolute;
     font-family:"Comic Sans MS", sans-serif;
     color:white;
@@ -159,12 +159,12 @@ img {
     overflow: hidden;
     position: relative;
     border-radius: 30px;
-    top: -90px;
-    margin: auto;
+    top: -150px;
+    /* margin: auto; */
     margin-top: 50px;
     border: solid 3px rgb(233, 235, 175);
-    margin-bottom: 10px;
-    margin-left: 550px;
+    margin-bottom: -30px;
+    margin-left: 400px;
 }
  
     
@@ -198,7 +198,7 @@ margin-top:  -250px
   
 
 #instructions {
-margin-left:400px;
+margin-left:200px;
 margin-top: 245px;
 color:rgb(233, 235, 175);
 }
